# Web_Engineering

./: .gitignore  AGENTS.md  README.md  main.py  manage.py  pyproject.toml  pytest.ini
apps/movies/: forms.py  models.py  urls.py  views.py
apps/movies/migrations/: 0001_initial.py
apps/movies/templates/movies/: confirmation.html  home.html  list.html  login.html  register.html  reserve.html  search.html
openspec/changes/archive/2026-07-08-add-movies-app/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-08-implement-movies-basic-views/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-08-implement-user-input-handling/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-08-update-home-page-links/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-08-update-home-page-links/specs/: _delta.md
openspec/changes/archive/2026-07-13-movies-app-ui-overhaul/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-24-production-deployment-setup/: design.md  proposal.md  tasks.md
openspec/changes/review-agentic-setup/: design.md  proposal.md  tasks.md
openspec/specs/movie-search/: spec.md
openspec/specs/movie-views/: spec.md
openspec/specs/movies-accessibility/: spec.md
openspec/specs/movies-responsive-design/: spec.md
openspec/specs/movies-static-assets/: spec.md
openspec/specs/production-deployment/: spec.md
openspec/specs/user-forms/: spec.md
staticfiles/movies/css/: style.css
the_movies/: asgi.py  settings.py  urls.py  wsgi.py
(+19 files in other folders)
